--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
   <footer id="footer">
     <div class="container">
       <h3 style="font-family: 'Times New Roman', Times, serif; color: aliceblue;" >Ethernal</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla neque inventore dolore repellendus ex dolor, sequi dolores iusto iste provident totam ipsum, optio pariatur. Minus sunt autem labore dolorem sed.</p>
+      <p>Our Father Eternal and Memorial Garden, where we provide a serene and natural environment to honor and remember your loved ones.</p>
 
   
  
