--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
     href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i,700,700i|Satisfy|Comic+Neue:300,300i,400,400i,700,700i"
     rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/times-new-roman" rel="stylesheet">
+
   <!-- Vendor CSS Files -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
@@ -342,6 +344,7 @@
           </div>
         </div>
       </div>
+          <div class=" col-xl-3 col-lg-4 col-md-4 d-flex align-items-center justify-content-center  " >
           <div class="card p-0 " style="width: 18rem;height: inherit;">
             <img class="card-img-top" src="/assets/img/slide/default-avatar-icon-of-social-media-user-vector.jpg" style="height: 16rem;" alt="Card image cap">
             <div class="card-body">
