updated new pages and AOS contacts logo

--- a/welcome-page.html
+++ b/welcome-page.html
@@ -70,9 +70,7 @@
           <li><a href="/index.html#FAQ">FAQ's</a></li>
          
           <li><a href="/index.html#services">Services</a></li>
-        
           <li><a class="nav-link scrollto" href="#contact">Contacts</a></li>
-   
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -85,12 +83,8 @@
     <section   style="background-color: #eeeeee;  " class="my-5"  id="welcome"  >
       <div class="container-fluid" data-aos="fade-up" >
   
-        <div class="row-reverse d-flex align-items-center justify-content-center">
-          <!-- <div class="col-lg-5 align-items-stretch video-box" style='background-image: url("assets/img/about.jpg");'>
-            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn mb-4"></a>
-             </div> -->
-  
-          <div class="col-lg-4 d-flex flex-column " id="welcome-container" >
+        <div class="row d-flex align-items-center justify-content-center">
+          <div class="col-lg-4 d-flex flex-column justify-content-center " id="welcome-container" >
             <img style="min-width: 20px; max-width:7.9rem;" src="assets/img/slide/divider-eternal.png" alt="">
             <h2 style="font-family: 'Times New Roman', sans-serif;">Welcome</h2>
             <p class="welcome-text" >
@@ -98,10 +92,6 @@
               honor and remember your loved ones. Discover our wide range of services, beautiful garden settings, and
               personalized memorialization options.
             </p>
-            <!-- <div>
-              <button type="button" style="background-color: #88775d; color: aliceblue;   "
-                class="px-5 py-3 btn rounded-0">Read more</button>
-            </div> -->
           </div>
           <div class="col-lg-4" id="home-container">
             <img src="assets/img/graveyard.jpg" id="home"  class="mb-4"   alt="">
