--- a/index.html
+++ b/index.html
@@ -150,9 +150,14 @@
         <p style="text-align: center; margin-bottom: 1rem;">
           Learn about our traditional burial plots, cremation gardens, mausoleum, and custom memorial options.
         </p>
+        <a href="/memorialization-page.html">
+          <button type="button"  style="background-color: #88775d; color: aliceblue;   "
+          class="px-4 py-2 btn rounded-0">Learn more</button>
+        </a> 
       </div>
-      <img src="assets/img/slide/corner-borer-lan.png" style="width:6rem; height: 4rem; align-self: start;"
-        alt="">
+      <img src="assets/img/slide/corner-borer-lan.png" style="width:6rem; height: 4rem; align-self: start; margin-right: 4rem;"
+      alt="">
+  
     </div>
   </div>
  </div>
@@ -168,6 +173,10 @@
           <p style="text-align: center; margin-bottom: 1rem;">
             We offer respectful and meaningful cremation services tailored to your needs.
           </p>
+          <a href="/cremation-service-page.html">
+            <button type="button"  style="background-color: #88775d; color: aliceblue;   "
+            class="px-4 py-2 btn rounded-0">Learn more</button>
+          </a> 
         </div>
         <img src="assets/img/slide/corner-borer-lan.png" style="width:6rem; height: 4rem; align-self: start;"
           alt="">
@@ -185,6 +194,10 @@
         <h4 class="card-title  mb-4" style="font-family: 'Times New Roman', Times, serif;">Event Rentals</h4>
         <p style="text-align: center; margin-bottom: 1rem;">
           Host life celebrations and memorial events in our peaceful and picturesque garden. </p>
+          <a href="/event-rentals.html">
+            <button type="button"  style="background-color: #88775d; color: aliceblue;   "
+            class="px-4 py-2 btn rounded-0">Learn more</button>
+          </a> 
       </div>
       <img src="assets/img/slide/corner-borer-lan.png" style="width:6rem; height: 4rem; align-self: start;"
         alt="">
@@ -609,7 +622,7 @@
             <div class="error-message"></div>
             <div class="sent-message">Your message has been sent. Thank you!</div>
           </div>
-          <div class="text-center"><button type="submit" style="background-color: #88775d; border-color: #88775d; border-radius: 0%; ">Send Message</button></div>
+          <div class="text-center"><button type="submit" style="background-color: #88775d; border-color: #88775d; border-radius: 0%; font-size: larger;">Send</button></div>
         </form>
 
       </div>
