--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-
   <!-- =======================================================
   * Template Name: Delicious
   * Template URL: https://bootstrapmade.com/delicious-free-restaurant-bootstrap-theme/
@@ -95,7 +94,7 @@
           <div class="carousel-item active" style="background-image: url(assets/img/slide/burning-candles.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
-                <div class="container p-4" style="background-color: #052d43;">
+                <div class="container p-4 " style="margin-top: 5rem; background-color: #052d43;">
                   <img style="min-width: 20px; max-width: 20rem;" src="assets/img/slide/divider-eternal.png" alt="">
                   <h2 class="animate__animated animate__fadeInDown p-4"
                     style="font-family: 'Times New Roman', sans-serif; font-weight: 400;"> Honor Your Loved Ones <br> at
@@ -137,9 +136,9 @@
    </div>
     </div>
     <div class="d-flex align-items-center justify-content-center m-4  px-xl-5">
-      <div class="container-fluid row justify-content-evenly px-4 my-5  ">
+      <div class="container-fluid row justify-content-evenly  my-5  ">
         
- <div data-aos="fade-up"  class="col-xl-3 col-lg-12 m-lg-4 m-md-2 m-sm-2 m-2 d-flex align-items-center justify-content-center" >
+ <div data-aos="fade-up"  class="col-xl-3 col-lg-12 m-lg-4 m-md-2 m-sm-2 d-flex align-items-center justify-content-center" >
   <div  class="card " style="width: 22rem; background-color:#052D43; color: aliceblue; border-radius: 0%; ">
     <div class="card-body ">
       <div class="flex-column d-flex align-items-center justify-content-center">
@@ -162,7 +161,7 @@
   </div>
  </div>
 
-  <div data-aos="fade-up"  class="col-xl-3 col-lg-12 m-lg-4 m-md-2 m-sm-2 m-2 d-flex align-items-center justify-content-center" >
+  <div data-aos="fade-up"  class="col-xl-3 col-lg-12 m-lg-4 m-md-2 m-sm-2  d-flex align-items-center justify-content-center" >
     <div class="card " style="width: 22rem; background-color:#052D43; color: aliceblue; border-radius: 0%;">
       <div class="card-body ">
         <div class="flex-column d-flex align-items-center justify-content-center">
@@ -184,7 +183,7 @@
     </div>
   </div>
 
-<div data-aos="fade-up"  class="col-xl-3 col-lg-12 m-lg-4 m-md-2 m-sm-2 m-2 d-flex align-items-center justify-content-center" >
+<div data-aos="fade-up"  class="col-xl-3 col-lg-12 m-lg-4 m-md-2 m-sm-2  d-flex align-items-center justify-content-center" >
   <div class="card " style="width: 22rem; background-color:#052D43; color: aliceblue; border-radius: 0%;">
     <div class="card-body ">
       <div class="flex-column d-flex align-items-center justify-content-center">
