--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Father Ethernal and Memorial Garden</title>
+  <title>Our Father Eternal and Memorial Garden
+  </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
