--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div class="d-flex flex-column align-items-center justify-content-center">
  
         <div class="d-flex flex-row " >
-          <img src="/assets/img/our-father-logo.png" style="width: 4rem; margin-right: 1rem;"  >
-          <img src="/assets/img/our-father-logo-text.png" style="height: 4rem;"  >
+          <img src="/assets/img/our-father-logo.png" id="logo-ourfather"  >
+          <img src="/assets/img/our-father-logo-text.png" id="slogan" >
           
         </div>
         </div>
@@ -74,7 +74,7 @@
           <li><a class="nav-link scrollto" href="#contact">Contacts</a></li>
    
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        <i class="bi bi-list mobile-nav-toggle mx-3"  ></i>
       </nav><!-- .navbar -->
 
 
@@ -642,8 +642,8 @@
     </div>
   </footer><!-- End Footer -->
 
-  <!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a> -->
+   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+       class=" bi bi-arrow-up-short"></i></a> 
 
   <!-- Vendor JS Files -->
 
