--- a/event-rentals.html
+++ b/event-rentals.html
@@ -50,12 +50,12 @@
     style="background-color: #052D43; min-height: 5rem;">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center ">
         <div class="d-flex flex-column align-items-center justify-content-center">
- 
-        <div class="d-flex flex-row " >
-          <img src="/assets/img/our-father-logo.png" style="width: 4rem; margin-right: 1rem;"  >
-          <img src="/assets/img/our-father-logo-text.png" style="height: 4rem;"  >
-          
-        </div>
+          <a href="/index.html">
+            <div class="d-flex flex-row " >
+              <img src="/assets/img/our-father-logo.png" id="logo-ourfather"  >
+              <img src="/assets/img/our-father-logo-text.png" id="slogan" >
+            </div>
+           </a>
         </div>
     </div>
   </section>
