--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center ">
         <div class="d-flex flex-column align-items-center justify-content-center">
  
-        <div class="d-flex flex-row " >
-          <img src="/assets/img/our-father-logo.png" id="logo-ourfather"  >
-          <img src="/assets/img/our-father-logo-text.png" id="slogan" >
-          
-        </div>
+     <a href="/index.html">
+      <div class="d-flex flex-row " >
+        <img src="/assets/img/our-father-logo.png" id="logo-ourfather"  >
+        <img src="/assets/img/our-father-logo-text.png" id="slogan" >
+      </div>
+     </a>
         </div>
     </div>
   </section>
