updated UI ourfather

--- a/welcome-page.html
+++ b/welcome-page.html
@@ -47,28 +47,51 @@
 
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center fixed-top topbar-transparent"
-    style="background-color: #052D43; min-height: 5rem;">
-    <div class="container-fluid container-xl d-flex align-items-center justify-content-center ">
-        <div class="d-flex flex-column align-items-center justify-content-center">
- 
-          <a href="/index.html">
-            <div class="d-flex flex-row " >
-              <img src="/assets/img/our-father-logo.png" id="logo-ourfather"  >
-              <img src="/assets/img/our-father-logo-text.png" id="slogan" >
-            </div>
-           </a>
-        </div>
+  style="background-color: none;">
+  <div class="container-fluid container-xl d-flex align-items-center justify-content-center ">
+      <div class="d-flex flex-column align-items-center justify-content-center">
+
+   <a href="/index.html">
+    <div class="d-flex flex-row "  style="background-color: #fafcfe; padding: 1rem; border-radius: 2rem;  ">
+      <img src="/assets/img/our-father-logo.png" id="logo-ourfather"  >
+      <img src="/assets/img/our-father-logo-text.png" id="slogan" >
     </div>
-  </section>
+   </a>
+      </div>
+  </div>
+</section>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center " style="background-color:  #0d4665;">
+  <header id="header" class="fixed-top d-flex align-items-center " style="background-color:  #a89e7d;">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center">
       <nav id="navbar" class="navbar order-last order-lg-0 ">
         <ul class="">
           <li><a class="nav-link scrollto " href="/index.html">Home</a></li>
           <li><a class="nav-link  " href="/index.html#welcome">About</a></li>
-          <li><a href="/index.html#services">Services</a></li>
+   
+          <li class="dropdown">
+            <a href="/index.html#services"
+              ><span>Services</span> <i class="bi bi-chevron-down"></i
+            ></a>
+            <ul>
+              <li><a href="memorialization-page.html">Memorialization</a></li>
+              <!-- <li class="dropdown">
+                <a href="#"
+                  ><span>Deep Drop Down</span>
+                  <i class="bi bi-chevron-right"></i
+                ></a>
+                <ul>
+                  <li><a href="#">Deep Drop Down 1</a></li>
+                  <li><a href="#">Deep Drop Down 2</a></li>
+                  <li><a href="#">Deep Drop Down 3</a></li>
+                  <li><a href="#">Deep Drop Down 4</a></li>
+                  <li><a href="#">Deep Drop Down 5</a></li>
+                </ul>
+              </li> -->
+              <li><a href="cremation-service-page.html">Cremation Services</a></li>
+              <li><a href="event-rentals.html">Event Rentals</a></li>
+            </ul>
+          </li>
           <li><a href="/index.html#FAQ">FAQ's</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contacts</a></li>
         </ul>
