update reservation pag

--- a/cremation-service-page.html
+++ b/cremation-service-page.html
@@ -96,6 +96,8 @@
           <li><a href="/index.html#FAQ">FAQ's</a></li>
         
           <li><a class="nav-link scrollto" href="#contact">Contacts</a></li>
+          <li><a class="nav-link scrollto" href="/reservation.html">Reservation</a></li>
+
    
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
