--- a/welcome-page.html
+++ b/welcome-page.html
@@ -94,6 +94,8 @@
           </li>
           <li><a href="/index.html#FAQ">FAQ's</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contacts</a></li>
+          <li><a class="nav-link scrollto" href="/reservation.html">Reservation</a></li>
+
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
