--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                   <div>
                     <!-- <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Our Menu</a> -->
                     <!-- <button type="submit">Send Message</button> -->
-                    <button data-filter="*" style="background-color: #88775d; border-color: #88775d; border-radius: 0%; " data-bs-toggle="modal" data-bs-target="#exampleModal"  type="button"
-                      class="btn btn-book animate__animated animate__fadeInUp scrollto">reserve a unit</button>
+                    <a href="#contact" style="background-color: #88775d; border-color: #88775d; border-radius: 0%; " type="button"
+                      class="btn btn-book scrollto">Inquire Now!</a>
              
                     </div>
                 </div>
@@ -837,38 +837,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
 
-  <script>
 
-    function myServices(data){
-    document.getElementById("our-services").innerHTML = data;
-    }
-
-    async function myFunciton(){
-      // return "Our Services"
-const url = "https://psgc.cloud/api/provinces"
-try{
-  const response = await fetch(url);
-  if(!response.ok){
-    throw new Error(`Response status: ${response.status}`);
-  }
- const json = await response.json();
- console.log(json);
- let provinceName = ""
- json.forEach(province =>{
-  console.log(province.name);
-  provinceName += province.name;  
- })
-return provinceName
-} catch (error){
-  console.error(error.message);
-}
-
-    }
- 
-    myFunciton().then(
-    function(value) {myServices(value);}
-    );
-  </script>
 
 <script>
   import { Collapse, initMDB } from 'mdb-ui-kit';
