--- a/index.html
+++ b/index.html
@@ -684,11 +684,8 @@
       <section id="gallery" class="gallery">
         <div class="container-fluid">
           <div class="section-title">
-            <h2>Some photos from <span>Our Restaurant</span></h2>
-            <p>
-              Ut possimus qui ut temporibus culpa velit eveniet modi omnis est
-              adipisci expedita at voluptas atque vitae autem.
-            </p>
+            <h2 style="font-family: 'Times New Roman', Times, serif;" >Some photos from <span style="color: #a89e7d;">Our Father memorial</span></h2>
+         
           </div>
 
           <div class="row g-0">
