--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
     </div>
   </header><!-- End Header -->
-  <a href="#" class="float float-enter float-scale" >
-    <i class=" my-float" style=" align-items: center; justify-content: center; display: flex; padding: .5rem;" >Reserve now!</i>
-    </a>
+<div id="float">
+  <a href="reservation.html" id="float-enter" >Reserve Now!</a>
+</div>
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
