--- a/reservation.html
+++ b/reservation.html
@@ -47,7 +47,7 @@
 
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center fixed-top topbar-transparent"
-    style="background-color: none;">
+    style="background-color:  #fafcfe;">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center ">
         <div class="d-flex flex-column align-items-center justify-content-center">
  
@@ -118,19 +118,20 @@
         </div>
         <div class="modal-body">
           <form>
-            <div class="form-group">
+            <div class="d-flex align-item-center justify-content-between" >
+            <div class="form-group col-lg-4 col-md-9">
               <label for="recipient-name" class="col-form-label">LASTNAME</label>
               <input   type="text" class="form-control" id="recipient-name">
             </div>
-            <div class="form-group">
+            <div class="form-group col-lg-4 col-md-9">
               <label for="recipient-name" class="col-form-label">FIRSTNAME</label>
               <input type="text" class="form-control" id="recipient-name">
             </div>
-            <div class="form-group">
+            <div class="form-group col-lg-3 col-md-9">
               <label for="recipient-name" class="col-form-label">MIDDLENAME</label>
               <input type="text" class="form-control" id="recipient-name">
             </div>
-      
+          </div>
             <div class="form-group">
               <label for="message-text" class="col-form-label">ADDRESS 1</label>
               <textarea class="form-control" id="message-text"></textarea>
