--- a/event-rentals.html
+++ b/event-rentals.html
@@ -47,7 +47,7 @@
 
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center fixed-top topbar-transparent"
-    style="background-color: none;">
+    style="background-color:  #fafcfe;">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center ">
         <div class="d-flex flex-column align-items-center justify-content-center">
  
