added images carousel on services

--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
 
 
     </div>
+ 
+    <a href="reservation.html" class="header-button" id="header-button">
+      <div  id="header-button-content">Reserve Now!!</div>
+    </a>
   </header><!-- End Header -->
-<div id="float">
-  <a href="reservation.html" id="float-enter" >Reserve Now!</a>
-</div>
+
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
