--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <body>
   
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-center " style="background-color:  none;">
+  <header id="header" class="fixed-top" style="background-color:  none; ">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center">
       <nav id="navbar" class="navbar order-last order-lg-0 ">
         <ul class="">
@@ -107,10 +107,11 @@
 
 
     </div>
- 
-    <a href="reservation.html" class="header-button" id="header-button">
+    <div class="header-button-container w-25" >
+    <a href="reservation.html" class="header-button " id="header-button">
       <div  id="header-button-content">Reserve Now!!</div>
     </a>
+  </div>
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
@@ -488,8 +489,8 @@
     <div data-aos="fade-up" >
 
       <div class="row">
-        <div class="col-lg-4 " style="display: flex; flex-wrap: nowrap; align-items: center;" >
-          <ul class="nav nav-tabs flex-column">
+        <div class="col-lg-4 " id="services" style="display: flex; flex-wrap: nowrap; align-items: center;" >
+          <ul class="nav nav-tabs flex-column w-100">
       <h2 style="font-family: 'Times New Roman', Times, serif; " class="my-3" >Memorialization Options</h2>
 
             <li class="nav-item">
@@ -541,9 +542,9 @@
             </div>
             <div class="tab-pane" id="ta-3">
               <div class="d-flex flex-column-reverse  ">
-                <div class="col-lg-9 text-center order-1 order-lg-2">
+                <div class="col-lg-9 text-center order-1 order-lg-2 ">
                  
-                  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                  <!-- <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img class="d-block w-100" src="assets/img/gallery/gallery-4.jpg" alt="First slide">
@@ -555,6 +556,28 @@
                         <img class="d-block w-100" src="assets/img/gallery/gallery-1.jpg" alt="Third slide">
                       </div>
                     </div>
+                  </div> -->
+
+                  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="assets/img/gallery/gallery-4.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/img/gallery/gallery-5.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/img/gallery/gallery-1.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
                   </div>
                   <!-- <img src="assets/img/gallery/gallery-8.jpg" alt="" class="img-fluid"> -->
                 </div>
@@ -612,8 +635,8 @@
     <div data-aos="fade-up" >
 
       <div class="row">
-        <div class="col-lg-4 " style="display: flex; flex-wrap: nowrap; align-items: center;" >
-          <ul class="nav nav-tabs flex-column">
+        <div class="col-lg-4 " id="services" style="display: flex; flex-wrap: nowrap; align-items: center;" >
+          <ul class="nav nav-tabs w-100 flex-column">
       <h2 style="font-family: 'Times New Roman', Times, serif; " class="my-3" >Cremation Services</h2>
 
             <li class="nav-item">
@@ -674,8 +697,8 @@
     <div data-aos="fade-up" >
 
       <div class="row">
-        <div class="col-lg-4 " style="display: flex; flex-wrap: nowrap; align-items: center;" >
-          <ul class="nav nav-tabs flex-column">
+        <div class="col-lg-4 "  id="services" style="display: flex; flex-wrap: nowrap; align-items: center;" >
+          <ul class="nav nav-tabs w-100 flex-column">
       <h2 style="font-family: 'Times New Roman', Times, serif; " class="my-3" >Event Rentals</h2>
 
             <li class="nav-item">
