--- a/reservation.html
+++ b/reservation.html
@@ -118,18 +118,18 @@
         </div>
         <div class="modal-body">
           <form>
-            <div class="d-flex align-item-center justify-content-between" >
-            <div class="form-group col-lg-4 col-md-9">
-              <label for="recipient-name" class="col-form-label">LASTNAME</label>
-              <input   type="text" class="form-control" id="recipient-name">
+            <div class="d-flex align-item-center justify-content-between" id="nameForm">
+            <div class="form-group col-lg-4 ">
+              <label for="recipient-last-name" class="col-form-label">LASTNAME</label>
+              <input   type="text" class="form-control" id="recipient-last">
             </div>
-            <div class="form-group col-lg-4 col-md-9">
+            <div class="form-group col-lg-4 ">
               <label for="recipient-name" class="col-form-label">FIRSTNAME</label>
               <input type="text" class="form-control" id="recipient-name">
             </div>
             <div class="form-group col-lg-3 col-md-9">
-              <label for="recipient-name" class="col-form-label">MIDDLENAME</label>
-              <input type="text" class="form-control" id="recipient-name">
+              <label for="recipient-middle-name" class="col-form-label">MIDDLENAME</label>
+              <input type="text" class="form-control" id="recipient-middle">
             </div>
           </div>
             <div class="form-group">
