--- a/reservation.html
+++ b/reservation.html
@@ -113,7 +113,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header" style="display: flex; align-items: center; justify-content: space-between; " >
-          <h2 style="font-family: 'Times New Roman', Times, serif; font-weight: bold; color: #fafcfe;" class="modal-title" id="exampleModalLabel">RESERVATION</h2>
+          <h1 style="font-family:'Times New Roman', Times, serif; font-weight: 500; color: #fafcfe;" class="modal-title" id="exampleModalLabel">Reservation Form</h1>
           </button>
         </div>
         <div class="modal-body">
