--- a/reservation.html
+++ b/reservation.html
@@ -184,7 +184,11 @@
           </form>
         </div>
         <div class="modal-footer pt-4 m-6">
-          <button type="button" class="btn btn-primary">Submit</button>
+          <!-- <button type="button" class="btn btn-primary">Submit</button> -->
+          <a href="reservation.html">
+            <button type="button"  style="background-color: #88775d; color: aliceblue;   "
+            class="px-4 py-2 btn rounded-0">SUBMIT</button>
+          </a> 
         </div>
       </div>
     </div>
