updated imges in hero section

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
+
       <div 
       id="heroCarousel" 
       data-bs-interval="3000" 
@@ -124,6 +125,9 @@
       data-bs-ride="carousel"
       >
         <div class="carousel-inner" role="listbox">
+          <div>
+            <img src="assets/img/gallery-6-removebg-preview.png" class="rebolto-1" alt="">
+          </div>
           <!-- Slide 1 -->
                 <!-- <div class="container p-4 " style="margin-top: 3rem; background-color: #a89e7d;"> -->
 
@@ -201,6 +205,9 @@
       </div>
      </div>
    </div>
+   <div>
+    <img src="assets/img/gallery-3-removebg-preview.png" class="rebolto-2" alt="">
+  </div>
         </div>
 
       </div>
@@ -414,7 +421,7 @@
             </a>
           </div>
           <div class="col-lg-4" id="home-container">
-            <img src="assets/img/graveyard.jpg" id="home"  class="mb-4"   alt="">
+            <img src="assets/img/gallery-9.png" id="home"  class="mb-4" style="width: 20rem;"   alt="">
           </div>
         </div>
   
@@ -431,7 +438,7 @@
         <div class="row d-flex align-items-center justify-content-center" id="about">
 
           <div class="col-lg-6 align-items-center justify-content-center d-flex">
-            <img src="assets/img/slide/flowers-about-us.jpg" id="flowers" class="mb-4"
+            <img src="assets/img/gallery-7.png" style="width: 25rem;" id="flowers" class="mb-4"
               alt="">
           </div>
           <div class="col-lg-6 d-flex flex-column justify-content-center" id="about-container" >
