fix bug in cremation and indexx

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
 </head>
 
 
@@ -92,7 +91,7 @@
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li> -->
-              <li><a href="cremation-service-page.html">Cremation Services</a></li>
+              <li><a href="cremation-service-page.html" >Cremation Services</a></li>
               <li><a href="event-rentals.html">Event Rentals</a></li>
             </ul>
           </li>
@@ -828,10 +827,10 @@
 
 
 
-<script>
+<!-- <script>
   import { Collapse, initMDB } from 'mdb-ui-kit';
   initMDB({ Collapse });
-</script>
+</script> -->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
