--- a/event-rentals.html
+++ b/event-rentals.html
@@ -327,10 +327,10 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
 
-<script>
+<!-- <script>
   import { Collapse, initMDB } from 'mdb-ui-kit';
   initMDB({ Collapse });
-</script>
+</script> -->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
