--- a/memorialization-page.html
+++ b/memorialization-page.html
@@ -463,11 +463,11 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-
+<!-- 
 <script>
   import { Collapse, initMDB } from 'mdb-ui-kit';
   initMDB({ Collapse });
-</script>
+</script> -->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
