--- a/reservation.html
+++ b/reservation.html
@@ -360,7 +360,6 @@ async function myCitiesFunction(provinceCode) {
 
 async function handleOnchangeCities(value){
 // provinceCode = value
-console.log(value);
 myBarangayFunction(value);
 }
 async function myBarangayFunction(citiesCode) {
@@ -392,10 +391,10 @@ async function myBarangayFunction(citiesCode) {
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
 
-<script>
+<!-- <script>
   import { Collapse, initMDB } from 'mdb-ui-kit';
   initMDB({ Collapse });
-</script>
+</script> -->
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
